<resources>
    <string name="app_name">Hospital</string>

    <!--Splash activity-->
    <string name="image_splash">Imagen principal</string>
    <string name="view_principal">Solicitudes de Servicios de Ambulancia</string>

    <!--Principal-->
    <string name="btn_solicitud">Solicitud de ambulancia</string>
    <string name="btn_historia">Historia</string>
    <string name="btn_salir">Salida</string>

    <!--Fragment_solicitud-->
    <string name="view_nombre">Nombre del solicitante</string>
    <string name="txt_nombre">Escribe aqui</string>
    <string name="view_comentario">Escribe un comentario o una fecha</string>
    <string name="txt_comentario">Comentario - Fecha</string>
    <string name="view_gps">Coordenadas actuales</string>
    <string name="btn_syn">Sincroniza coordenadas</string>
    <string name="btn_envia_solicitud">Hacer solicitud</string>

    <!--FullScreenDialog-->
    <string name="view_screen_title">Envio de datos</string>
    <string name="view_fecha">Fecha:</string>
    <string name="view_nombre_dos">Nombre:</string>
    <string name="view_gps_dos">Coordenadas:</string>
    <string name="btn_envia_solicitud_dos">Confirmar solicitud</string>

    <!--item_list-->
    <string name="view_fecha_lista">Fecha</string>
    <string name="view_nombre_lista">Nombre</string>
    <string name="view_comentario_lista">Comentario</string>
    <string name="view_gps_lista">Coordenada</string>
</resources>
