<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_fecha_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/view_fecha_lista"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/view_nombre_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/view_nombre_lista"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/view_comentario_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/view_comentario_lista"
                android:textStyle="normal"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/view_gps_lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/view_gps_lista"
                android:textStyle="normal"
                android:textSize="20sp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorLinearLayout"/>

</LinearLayout>